--- a/frontend/rental.html
+++ b/frontend/rental.html
@@ -522,7 +522,7 @@
         </div>
     </div>
     <script>
-        const API_BASE_URL = '/api';
+        const API_BASE_URL = 'https://booking-ub69.onrender.com/api';
 
         const state = {
             settings: null,
