--- a/admin/index.html
+++ b/admin/index.html
@@ -19,16 +19,32 @@
     </style>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
     <style>
+        :root {
+            --brand-primary: #0f172a;
+            --brand-secondary: #3b82f6;
+            --surface: #f8fafc;
+            --surface-alt: #ffffff;
+            --text-main: #1e293b;
+            --text-muted: #64748b;
+            --accent: #10b981;
+            --danger: #ef4444;
+            --border: #e2e8f0;
+            --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+            --shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+        }
+
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Microsoft JhengHei', 'Segoe UI', Roboto, sans-serif;
-            background: #EDEDE9;
+            font-family: -apple-system, BlinkMacSystemFont, 'Inter', 'Segoe UI', Roboto, sans-serif;
+            background: var(--surface);
             min-height: 100vh;
-            padding: 24px;
-            color: #1f2933;
+            padding: 32px;
+            color: var(--text-main);
+            line-height: 1.5;
         }
 
         a {
-            color: #145da0;
+            color: var(--brand-secondary);
+            text-decoration: none;
         }
 
         .admin-container {
@@ -38,12 +54,13 @@
         }
 
         .admin-header {
-            background: #fff;
-            border-radius: 18px;
-            padding: 28px;
-            margin-bottom: 24px;
-            box-shadow: 0 24px 50px rgba(0, 0, 0, 0.12);
+            background: var(--surface-alt);
+            border-radius: 20px;
+            padding: 32px;
+            margin-bottom: 32px;
+            box-shadow: var(--shadow);
             position: relative;
+            border: 1px solid var(--border);
         }
 
         .logout-btn {
@@ -51,67 +68,93 @@
             top: 24px;
             right: 24px;
             padding: 10px 18px;
-            background: #f2545b;
-            color: #fff;
-            border: none;
+            background: transparent;
+            color: var(--danger);
+            border: 1px solid var(--border);
             border-radius: 10px;
             cursor: pointer;
-            transition: opacity 0.2s;
+            transition: all 0.2s;
+            font-weight: 600;
         }
 
         .logout-btn:hover {
-            opacity: 0.8;
+            background: #fef2f2;
+            border-color: #fecaca;
         }
 
         .tabs {
             display: flex;
-            gap: 12px;
+            gap: 8px;
             margin-bottom: 24px;
-            border-bottom: 2px solid #d6dde6;
+            border-bottom: 1px solid var(--border);
             flex-wrap: wrap;
+            padding-bottom: 8px;
         }
 
         .tab-btn {
-            padding: 10px 18px;
+            padding: 10px 20px;
             background: transparent;
             border: none;
-            color: #52606d;
-            font-size: 1em;
+            color: var(--text-muted);
+            font-size: 0.95em;
             font-weight: 600;
             cursor: pointer;
-            border-bottom: 3px solid transparent;
+            border-radius: 8px;
+            transition: all 0.2s;
+        }
+
+        .tab-btn:hover {
+            color: var(--brand-secondary);
+            background: #eff6ff;
         }
 
         .tab-btn.active {
-            color: #0b4f6c;
-            border-bottom-color: #145da0;
+            color: var(--brand-secondary);
+            background: #eff6ff;
+            box-shadow: var(--shadow-sm);
         }
 
         .tab-content {
             display: none;
+            animation: fadeIn 0.3s;
         }
 
         .tab-content.active {
             display: block;
         }
 
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(5px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
         .section-card {
-            background: #fff;
-            border-radius: 18px;
-            padding: 24px;
-            margin-bottom: 24px;
-            box-shadow: 0 16px 40px rgba(0, 0, 0, 0.08);
+            background: var(--surface-alt);
+            border-radius: 20px;
+            padding: 32px;
+            margin-bottom: 32px;
+            box-shadow: var(--shadow);
+            border: 1px solid var(--border);
         }
 
         .section-card h3 {
-            color: #145da0;
-            margin-bottom: 18px;
+            color: var(--brand-primary);
+            margin-bottom: 24px;
             font-size: 1.4em;
+            font-weight: 700;
+            letter-spacing: -0.025em;
         }
 
         .form-grid {
             display: grid;
-            gap: 18px;
+            gap: 24px;
         }
 
         @media (min-width: 860px) {
@@ -122,9 +165,10 @@
 
         .input-group label {
             display: block;
-            margin-bottom: 6px;
+            margin-bottom: 8px;
             font-weight: 600;
-            color: #364152;
+            color: var(--text-main);
+            font-size: 0.9em;
         }
 
         .input-group input,
@@ -132,47 +176,68 @@
         .input-group select {
             width: 100%;
             padding: 12px;
-            border: 2px solid #d6dde6;
+            border: 1px solid var(--border);
             border-radius: 12px;
             font-size: 1em;
-            background: #fdfdfd;
-            color: #1f2933;
+            background: #fff;
+            color: var(--text-main);
+            transition: all 0.2s;
+            box-shadow: var(--shadow-sm);
         }
 
         .input-group textarea {
             resize: vertical;
-            min-height: 60px;
+            min-height: 80px;
         }
 
         .input-group input:focus,
         .input-group textarea:focus,
         .input-group select:focus {
-            border-color: #145da0;
+            border-color: var(--brand-secondary);
             outline: none;
-            box-shadow: 0 0 0 4px rgba(20, 93, 160, 0.12);
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.15);
         }
 
         .btn {
-            padding: 12px 18px;
+            padding: 12px 24px;
             border: none;
             border-radius: 12px;
             cursor: pointer;
             font-weight: 600;
             letter-spacing: 0.3px;
+            transition: all 0.2s;
+            box-shadow: var(--shadow-sm);
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #0b4f6c 0%, #145da0 100%);
+            background: var(--brand-primary);
             color: #fff;
         }
 
+        .btn-primary:hover {
+            background: var(--brand-secondary);
+            transform: translateY(-1px);
+            box-shadow: var(--shadow);
+        }
+
         .btn-secondary {
-            background: #e4ebf5;
-            color: #1f2933;
+            background: #fff;
+            color: var(--text-main);
+            border: 1px solid var(--border);
+        }
+
+        .btn-secondary:hover {
+            border-color: var(--brand-secondary);
+            color: var(--brand-secondary);
         }
 
         .btn-danger {
-            background: #f2545b;
+            background: #fee2e2;
+            color: var(--danger);
+        }
+
+        .btn-danger:hover {
+            background: var(--danger);
             color: #fff;
         }
 
@@ -183,7 +248,7 @@
         .status-chip {
             display: inline-flex;
             align-items: center;
-            padding: 4px 10px;
+            padding: 4px 12px;
             border-radius: 20px;
             font-size: 0.85em;
             font-weight: 600;
@@ -191,61 +256,77 @@
         }
 
         .status-pending {
-            background: #fff3cd;
-            color: #856404;
+            background: #fef3c7;
+            color: #92400e;
+            border: 1px solid #fcd34d;
         }
 
         .status-confirmed {
-            background: #d4edda;
-            color: #155724;
+            background: #d1fae5;
+            color: #065f46;
+            border: 1px solid #a7f3d0;
         }
 
         .status-cancelled {
-            background: #f8d7da;
-            color: #721c24;
+            background: #fee2e2;
+            color: #991b1b;
+            border: 1px solid #fecaca;
         }
 
         table {
             width: 100%;
-            border-collapse: collapse;
+            border-collapse: separate;
+            border-spacing: 0;
         }
 
         th,
         td {
-            padding: 14px;
-            border-bottom: 1px solid #e4ebf5;
+            padding: 16px;
+            border-bottom: 1px solid var(--border);
             text-align: left;
-            vertical-align: top;
+            vertical-align: middle;
         }
 
         th {
-            background: #f0f4fa;
-            color: #145da0;
+            background: #f8fafc;
+            color: var(--text-muted);
             font-weight: 600;
+            font-size: 0.9em;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+        }
+
+        tr:last-child td {
+            border-bottom: none;
+        }
+
+        tr:hover td {
+            background: #f8fafc;
         }
 
         .message {
-            padding: 12px 16px;
+            padding: 16px;
             border-radius: 12px;
-            margin-bottom: 16px;
+            margin-bottom: 24px;
             display: none;
+            font-weight: 500;
         }
 
         .message.success {
-            background: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
+            background: #ecfdf5;
+            color: #065f46;
+            border: 1px solid #a7f3d0;
         }
 
         .message.error {
-            background: #f8d7da;
-            color: #721c24;
-            border: 1px solid #f5c6cb;
+            background: #fef2f2;
+            color: #991b1b;
+            border: 1px solid #fecaca;
         }
 
         .item-list {
             display: grid;
-            gap: 16px;
+            gap: 20px;
         }
 
         @media (min-width: 900px) {
@@ -255,34 +336,42 @@
         }
 
         .item-card {
-            border: 1px solid #dce3ef;
+            border: 1px solid var(--border);
             border-radius: 16px;
-            padding: 18px;
-            background: #f8faff;
+            padding: 24px;
+            background: #fff;
             display: flex;
             flex-direction: column;
-            gap: 8px;
+            gap: 12px;
+            transition: all 0.2s;
+            box-shadow: var(--shadow-sm);
+        }
+
+        .item-card:hover {
+            border-color: var(--brand-secondary);
+            box-shadow: var(--shadow);
         }
 
         .item-card h4 {
-            color: #0b4f6c;
+            color: var(--brand-primary);
             font-size: 1.1em;
+            font-weight: 700;
         }
 
         .item-card small {
-            color: #516273;
+            color: var(--text-muted);
         }
 
         .item-actions {
-            margin-top: 12px;
+            margin-top: 16px;
             display: flex;
-            gap: 8px;
+            gap: 12px;
         }
 
         .stat-grid {
             display: grid;
-            gap: 16px;
-            margin-bottom: 16px;
+            gap: 20px;
+            margin-bottom: 24px;
         }
 
         @media (min-width: 720px) {
@@ -292,29 +381,44 @@
         }
 
         .stat-card {
-            background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
-            color: #fff;
-            padding: 18px;
-            border-radius: 14px;
-            box-shadow: 0 12px 30px rgba(79, 172, 254, 0.35);
+            background: #fff;
+            color: var(--text-main);
+            padding: 24px;
+            border-radius: 20px;
+            box-shadow: var(--shadow);
+            border: 1px solid var(--border);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .stat-card::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            width: 6px;
+            background: var(--brand-secondary);
         }
 
         .stat-card h4 {
             font-size: 0.9em;
             text-transform: uppercase;
-            letter-spacing: 0.6px;
-            margin-bottom: 6px;
+            letter-spacing: 0.05em;
+            margin-bottom: 8px;
+            color: var(--text-muted);
         }
 
         .stat-card p {
-            font-size: 1.8em;
-            font-weight: 700;
+            font-size: 2.2em;
+            font-weight: 800;
+            color: var(--brand-primary);
         }
 
         .overview-grid {
             display: grid;
-            gap: 18px;
-            margin-top: 18px;
+            gap: 24px;
+            margin-top: 24px;
         }
 
         @media (min-width: 900px) {
@@ -326,42 +430,49 @@
         .overview-list {
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 16px;
         }
 
         .overview-card {
             background: #fff;
-            border: 1px solid #dce3ef;
-            border-radius: 14px;
-            padding: 16px;
-            box-shadow: 0 8px 18px rgba(0, 0, 0, 0.05);
+            border: 1px solid var(--border);
+            border-radius: 16px;
+            padding: 20px;
+            box-shadow: var(--shadow-sm);
         }
 
         .overview-card h4 {
-            color: #0b4f6c;
-            margin-bottom: 6px;
+            color: var(--brand-primary);
+            margin-bottom: 8px;
         }
 
         .overview-meta {
-            color: #52606d;
+            color: var(--text-muted);
             font-size: 0.9em;
             line-height: 1.6;
         }
 
         .overview-attendees {
-            margin-top: 10px;
+            margin-top: 12px;
             padding-left: 16px;
-            color: #52606d;
-            font-size: 0.88em;
+            color: var(--text-muted);
+            font-size: 0.9em;
+            border-left: 2px solid var(--border);
         }
 
         .overview-empty {
-            padding: 14px;
-            border: 1px dashed #d6dde6;
-            border-radius: 12px;
-            color: #52606d;
-            background: #f8faff;
-            font-size: 0.9em;
+            padding: 24px;
+            border: 2px dashed var(--border);
+            border-radius: 16px;
+            color: var(--text-muted);
+            background: #f8fafc;
+            font-size: 0.95em;
+            text-align: center;
+        }
+
+        /* Modal - Reuse logic */
+        #loginModal {
+            backdrop-filter: blur(8px);
         }
 
         /* Role Based UI */
