--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,88 +1,200 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studio Booking | 首頁</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Noto+Sans+TC:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
     <style>
         :root {
-            --brand-primary: #0b4f6c;
-            --brand-secondary: #145da0;
-            --surface: #f8f9fb;
-            --surface-strong: #ffffff;
+            --brand-primary: #0f172a;
+            /* Deep Slate Navy */
+            --brand-secondary: #3b82f6;
+            /* Bright Blue */
+            --brand-secondary-hover: #2563eb;
+            --surface: #f8fafc;
+            /* Very light cool gray */
+            --surface-alt: rgba(255, 255, 255, 0.85);
+            /* Glassmorphism base */
+            --text-main: #1e293b;
+            --text-muted: #64748b;
+            --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
+            --glass-border: 1px solid rgba(255, 255, 255, 0.5);
+            --glass-backdrop: blur(12px);
         }
-        * { box-sizing: border-box; }
+
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             margin: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Microsoft JhengHei', 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: radial-gradient(circle at top, rgba(20,93,160,0.18), transparent 55%), #edf1f7;
-            color: #1f2933;
+            font-family: 'Inter', 'Noto Sans TC', sans-serif;
+            background: linear-gradient(135deg, #f0f4ff 0%, #f8fafc 100%);
+            color: var(--text-main);
             min-height: 100vh;
+            line-height: 1.5;
+            -webkit-font-smoothing: antialiased;
         }
+
+        /* Decorative background blobs */
+        body::before {
+            content: '';
+            position: fixed;
+            top: -20%;
+            left: -10%;
+            width: 50%;
+            height: 50%;
+            background: radial-gradient(circle, rgba(59, 130, 246, 0.15) 0%, transparent 70%);
+            filter: blur(40px);
+            z-index: -1;
+        }
+
+        body::after {
+            content: '';
+            position: fixed;
+            bottom: -10%;
+            right: -5%;
+            width: 40%;
+            height: 40%;
+            background: radial-gradient(circle, rgba(16, 185, 129, 0.1) 0%, transparent 70%);
+            filter: blur(40px);
+            z-index: -1;
+        }
+
         header {
-            padding: 60px 24px 40px;
+            padding: 80px 24px 60px;
             text-align: center;
         }
+
         header h1 {
-            font-size: 2.8rem;
+            font-size: 3rem;
+            font-weight: 800;
+            letter-spacing: -0.03em;
             color: var(--brand-primary);
-            margin-bottom: 12px;
+            margin: 0 0 16px;
+            background: linear-gradient(135deg, var(--brand-primary) 0%, var(--brand-secondary) 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
-        header p { color: #475569; font-size: 1.1rem; }
+
+        header p {
+            color: var(--text-muted);
+            font-size: 1.125rem;
+            font-weight: 500;
+        }
+
         main {
-            max-width: 960px;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 0 24px 60px;
         }
+
         .card-grid {
             display: grid;
-            gap: 28px;
+            gap: 32px;
         }
+
         @media (min-width: 768px) {
-            .card-grid { grid-template-columns: repeat(2, minmax(0,1fr)); }
+            .card-grid {
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+            }
         }
+
         .nav-card {
             position: relative;
-            background: var(--surface-strong);
+            background: var(--surface-alt);
+            backdrop-filter: var(--glass-backdrop);
+            -webkit-backdrop-filter: var(--glass-backdrop);
             border-radius: 24px;
-            padding: 32px;
-            box-shadow: 0 24px 48px rgba(12,42,89,0.12);
-            border: 1px solid rgba(20,93,160,0.08);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            padding: 40px;
+            box-shadow: var(--shadow);
+            border: var(--glass-border);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             text-decoration: none;
             color: inherit;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            overflow: hidden;
         }
+
+        .nav-card::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.4) 0%, transparent 100%);
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
         .nav-card:hover {
-            transform: translateY(-6px);
-            box-shadow: 0 32px 60px rgba(15,55,98,0.18);
+            transform: translateY(-8px);
+            box-shadow: var(--shadow-lg);
+            border-color: rgba(59, 130, 246, 0.3);
         }
+
+        .nav-card:hover::after {
+            opacity: 1;
+        }
+
         .nav-card h2 {
-            font-size: 1.8rem;
-            color: var(--brand-secondary);
-            margin-bottom: 12px;
-        }
-        .nav-card p { color: #475569; line-height: 1.6; }
-        .nav-card span {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            margin-top: 20px;
-            font-weight: 600;
+            font-size: 1.75rem;
+            font-weight: 700;
             color: var(--brand-primary);
+            margin-bottom: 12px;
+            letter-spacing: -0.02em;
         }
+
+        .nav-card p {
+            color: var(--text-muted);
+            line-height: 1.6;
+            margin-bottom: auto;
+            /* Push footer down */
+            font-size: 1rem;
+        }
+
+        .card-footer {
+            margin-top: 24px;
+            display: flex;
+            align-items: center;
+            font-weight: 600;
+            color: var(--brand-secondary);
+            font-size: 1rem;
+            gap: 8px;
+            transition: gap 0.2s;
+        }
+
+        .nav-card:hover .card-footer {
+            gap: 12px;
+        }
+
         .badge {
             position: absolute;
             top: 24px;
             right: 24px;
-            background: rgba(20,93,160,0.1);
+            background: rgba(59, 130, 246, 0.1);
             color: var(--brand-secondary);
             padding: 6px 14px;
             border-radius: 999px;
-            font-size: 0.85rem;
+            font-size: 0.8rem;
             font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Studio Booking</h1>
@@ -91,16 +203,16 @@
     <main>
         <div class="card-grid">
             <a class="nav-card" href="./rental.html">
-                <div class="badge">Rental 場地租用</div>
-                <h2>Whole Venue Rental</h2>
-                <p>查看營業時間，選擇多個 30 分鐘時段並一次提交。支援尖峰 / 非尖峰自動計價，以及人數需求設定。</p>
-                <span>進入場地預約 →</span>
+                <div class="badge">Rental</div>
+                <h2>Venue Rental 場地租用</h2>
+                <p>查看營業時間，支援尖峰 / 非尖峰自動計價。選擇多個 30 分鐘時段並一次提交，適合個人練習或團體排練。</p>
+                <div class="card-footer">進入場地預約 →</div>
             </a>
-            <a class="nav-card" href="./classes.html">
-                <div class="badge" style="background:rgba(242,201,76,0.2);color:#a16207;">Class 課堂預約</div>
-                <h2>Class & Trial Centre</h2>
-                <p>瀏覽每週課堂時間表、購買課程套票或探索試堂方案。掌握即時名額與講師資訊。</p>
-                <span>前往課堂專區 →</span>
+            <a class="nav-card" href="./class-schedule.html">
+                <div class="badge" style="background:rgba(16, 185, 129, 0.1); color: #059669;">Classes</div>
+                <h2>Class Schedule 課堂預約</h2>
+                <p>瀏覽每週課堂時間表、探索試堂方案。即時查看名額與講師資訊，輕鬆完成課程預約。</p>
+                <div class="card-footer">前往課堂專區 →</div>
             </a>
         </div>
     </main>
@@ -117,4 +229,5 @@
         });
     </script>
 </body>
+
 </html>
