--- a/frontend/rental.html
+++ b/frontend/rental.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>場地租用預約 | Studio Booking</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Noto+Sans+TC:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
     <style>
         :root {
             --brand-primary: #0f172a;
@@ -14,7 +20,8 @@
             --brand-secondary-hover: #2563eb;
             --surface: #f8fafc;
             /* Very light cool gray */
-            --surface-alt: #ffffff;
+            --surface-alt: rgba(255, 255, 255, 0.85);
+            /* Glassmorphism base */
             --text-main: #1e293b;
             --text-muted: #64748b;
             --accent: #10b981;
@@ -22,9 +29,11 @@
             --danger: #ef4444;
             /* Red */
             --border: #e2e8f0;
+            --glass-border: 1px solid rgba(255, 255, 255, 0.5);
+            --glass-backdrop: blur(12px);
             --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-            --shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-            --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
         }
 
         * {
@@ -33,11 +42,25 @@
 
         body {
             margin: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Inter', 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: var(--surface);
+            font-family: 'Inter', 'Noto Sans TC', sans-serif;
+            background: linear-gradient(135deg, #f0f4ff 0%, #f8fafc 100%);
             color: var(--text-main);
             line-height: 1.5;
             -webkit-font-smoothing: antialiased;
+            min-height: 100vh;
+        }
+
+        /* Background decoration */
+        body::before {
+            content: '';
+            position: fixed;
+            top: -20%;
+            left: -10%;
+            width: 50%;
+            height: 50%;
+            background: radial-gradient(circle, rgba(59, 130, 246, 0.1) 0%, transparent 70%);
+            filter: blur(60px);
+            z-index: -1;
         }
 
         a {
@@ -46,12 +69,15 @@
         }
 
         header {
-            background: #ffffff;
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: var(--glass-backdrop);
+            -webkit-backdrop-filter: var(--glass-backdrop);
             color: var(--text-main);
             padding: 24px 24px 60px;
-            border-bottom: 1px solid var(--border);
+            border-bottom: 1px solid rgba(226, 232, 240, 0.6);
             position: relative;
             overflow: hidden;
+            z-index: 20;
         }
 
         header::before {
@@ -117,11 +143,13 @@
 
         .card {
             background: var(--surface-alt);
-            border-radius: 20px;
+            backdrop-filter: var(--glass-backdrop);
+            -webkit-backdrop-filter: var(--glass-backdrop);
+            border: var(--glass-border);
+            border-radius: 24px;
             box-shadow: var(--shadow);
             padding: 32px;
             margin-bottom: 32px;
-            border: 1px solid var(--border);
         }
 
         .card h2 {
@@ -163,7 +191,8 @@
             padding: 12px 16px;
             font-size: 1rem;
             color: var(--text-main);
-            background: #fff;
+            background: rgba(255, 255, 255, 0.6);
+            backdrop-filter: blur(4px);
             transition: all 0.2s ease;
             box-shadow: var(--shadow-sm);
         }
@@ -173,7 +202,9 @@
         select:focus {
             outline: none;
             border-color: var(--brand-secondary);
-            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.15);
+            background: #fff;
+            box-shadow: 0 0 0 4px rgba(59, 130, 246, 0.15);
+            /* Soft glow */
         }
 
         .slot-grid {
@@ -187,7 +218,8 @@
             border-radius: 12px;
             padding: 12px 8px;
             text-align: center;
-            background: #fff;
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(4px);
             font-weight: 600;
             color: var(--text-main);
             cursor: pointer;
@@ -208,11 +240,11 @@
             color: #fff;
             border-color: var(--brand-primary);
             box-shadow: var(--shadow);
-            transform: scale(1.02);
+            transform: scale(1.05);
         }
 
         .slot-button.disabled {
-            background: var(--surface);
+            background: rgba(248, 250, 252, 0.5);
             color: #cbd5e1;
             cursor: not-allowed;
             border-color: transparent;
@@ -274,16 +306,18 @@
             border: 1px solid var(--border);
             border-radius: 16px;
             padding: 16px;
-            background: #fff;
+            background: rgba(255, 255, 255, 0.6);
             display: flex;
             justify-content: space-between;
             align-items: center;
             gap: 12px;
-            transition: border-color 0.2s;
+            transition: all 0.2s;
         }
 
         .summary-item:hover {
             border-color: var(--brand-secondary);
+            transform: translateX(4px);
+            background: #fff;
         }
 
         .summary-date {
@@ -314,6 +348,7 @@
         .summary-item button:hover {
             background: #ef4444;
             color: #fff;
+            transform: rotate(90deg);
         }
 
         .summary-totals {
@@ -341,7 +376,7 @@
 
         .btn-primary {
             width: 100%;
-            background: var(--brand-primary);
+            background: linear-gradient(135deg, var(--brand-primary) 0%, var(--brand-secondary) 100%);
             color: #fff;
             font-weight: 600;
             border: none;
@@ -349,18 +384,35 @@
             padding: 16px;
             font-size: 1rem;
             cursor: pointer;
-            transition: all 0.2s;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             box-shadow: 0 4px 6px -1px rgba(15, 23, 42, 0.2);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn-primary::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(rgba(255, 255, 255, 0.1), transparent);
+            opacity: 0;
+            transition: opacity 0.2s;
         }
 
         .btn-primary:not(:disabled):hover {
-            background: var(--brand-secondary);
-            transform: translateY(-1px);
-            box-shadow: 0 10px 15px -3px rgba(59, 130, 246, 0.3);
+            transform: translateY(-2px) scale(1.02);
+            box-shadow: 0 10px 15px -3px rgba(59, 130, 246, 0.4);
+        }
+
+        .btn-primary:not(:disabled):hover::after {
+            opacity: 1;
         }
 
         .btn-primary:active {
-            transform: translateY(0);
+            transform: translateY(0) scale(1);
         }
 
         .btn-primary:disabled {
